Data/Logs/log-2020-07-14.txt


=============================================================
Время: 2020-07-14 09:59:43.515947

Ошибка:
Command "top" is not found
=============================================================

=============================================================
Время: 2020-07-14 09:59:51.876549

Ошибка:
Command "top" is not found
=============================================================

=============================================================
Время: 2020-07-14 12:08:59.450060

Ошибка:
Command "top" is not found
=============================================================

=============================================================
Время: 2020-07-14 12:10:32.802878

Ошибка:
You are missing Administrator permission(s) to run this command.
=============================================================

=============================================================
Время: 2020-07-14 12:11:55.892914

Ошибка:
You are on cooldown. Try again in 7194.54s
=============================================================

=============================================================
Время: 2020-07-14 12:13:46.073268

Ошибка:
You are missing Administrator permission(s) to run this command.
=============================================================

=============================================================
Время: 2020-07-14 14:45:59.961064

Ошибка:
Command raised an exception: FileNotFoundError: [Errno 2] No such file or directory: './Data/Profiles/Profile660110922865704980717776571406090310.json'
=============================================================

=============================================================
Время: 2020-07-14 14:46:13.665637

Ошибка:
You are on cooldown. Try again in 86386.28s
=============================================================

=============================================================
Время: 2020-07-14 14:47:06.244210

Ошибка:
Command raised an exception: NameError: name 'first_reputation' is not defined
=============================================================

=============================================================
Время: 2020-07-14 14:48:25.108116

Ошибка:
Command raised an exception: NameError: name 'money' is not defined
=============================================================

=============================================================
Время: 2020-07-14 14:50:15.940083

Ошибка:
You are on cooldown. Try again in 86396.64s
=============================================================

=============================================================
Время: 2020-07-14 14:53:25.837898

Ошибка:
You are on cooldown. Try again in 86398.56s
=============================================================

=============================================================
Время: 2020-07-14 14:54:06.232454

Ошибка:
You are on cooldown. Try again in 26.76s
=============================================================

=============================================================
Время: 2020-07-14 14:56:19.305995

Ошибка:
You are on cooldown. Try again in 29.25s
=============================================================

=============================================================
Время: 2020-07-14 14:57:16.079434

Ошибка:
You are on cooldown. Try again in 7198.74s
=============================================================

=============================================================
Время: 2020-07-14 14:57:17.952918

Ошибка:
You are on cooldown. Try again in 7196.83s
=============================================================

=============================================================
Время: 2020-07-14 15:09:27.196577

Ошибка:
Traceback (most recent call last):
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 596, in _load_from_module_spec
    spec.loader.exec_module(lib)
  File "<frozen importlib._bootstrap_external>", line 779, in exec_module
  File "<frozen importlib._bootstrap_external>", line 916, in get_code
  File "<frozen importlib._bootstrap_external>", line 846, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "E:\PyProg\ProstoTools(Original version)\Cogs\errors.py", line 58
    elif retry_after > 1800
                          ^
SyntaxError: invalid syntax

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "bot.py", line 75, in <module>
    client.load_extension(f'Cogs.{filename[:-3]}')
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 653, in load_extension
    self._load_from_module_spec(spec, name)
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 599, in _load_from_module_spec
    raise errors.ExtensionFailed(key, e) from e
discord.ext.commands.errors.ExtensionFailed: Extension 'Cogs.errors' raised an error: SyntaxError: invalid syntax (errors.py, line 58)

=============================================================

=============================================================
Время: 2020-07-14 15:10:07.244253

Ошибка:
You are on cooldown. Try again in 7198.92s
=============================================================

=============================================================
Время: 2020-07-14 15:11:12.400348

Ошибка:
You are on cooldown. Try again in 7199.07s
=============================================================

=============================================================
Время: 2020-07-14 15:12:17.016409

Ошибка:
You are on cooldown. Try again in 7199.11s
=============================================================

=============================================================
Время: 2020-07-14 15:12:40.047347

Ошибка:
You are on cooldown. Try again in 7198.93s
=============================================================

=============================================================
Время: 2020-07-14 15:14:26.044876

Ошибка:
You are on cooldown. Try again in 7198.99s
=============================================================

=============================================================
Время: 2020-07-14 15:18:31.957757

Ошибка:
You are on cooldown. Try again in 7197.25s
=============================================================

=============================================================
Время: 2020-07-14 15:18:34.740350

Ошибка:
You are on cooldown. Try again in 7194.51s
=============================================================

=============================================================
Время: 2020-07-14 15:18:35.923371

Ошибка:
You are on cooldown. Try again in 7193.40s
=============================================================

=============================================================
Время: 2020-07-14 15:18:37.366889

Ошибка:
You are on cooldown. Try again in 7191.85s
=============================================================

=============================================================
Время: 2020-07-14 15:18:38.929742

Ошибка:
You are on cooldown. Try again in 7190.28s
=============================================================

=============================================================
Время: 2020-07-14 15:18:40.092599

Ошибка:
You are on cooldown. Try again in 7189.11s
=============================================================

=============================================================
Время: 2020-07-14 15:18:41.586550

Ошибка:
You are on cooldown. Try again in 7187.71s
=============================================================

=============================================================
Время: 2020-07-14 21:51:21.293232

Ошибка:
You are on cooldown. Try again in 3595.29s
=============================================================